# pyperfanalytics

./: .gitignore  .gitmodules  GEMINI.md  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  test.yml
data/: edge_case_benchmarks.json  edhec.csv  managers.csv  r_benchmarks.json  r_benchmarks_v2.json  r_benchmarks_v3.json  tables_benchmarks.json  test_data.csv  test_data_v2.csv  test_data_v3.csv  yfinance_etfs.csv
docs/: audit_metrics_math.md  bugfix_burke_ratio.md
docs/api/: index.md  risk.md  utils.md
docs/sphinx/source/: README.md  analysis_es_modified.md  audit_metrics_math.md  bugfix_martin_pain_ratio_rf.md  charts.md  conf.py  index.md  index.rst  modules.rst  pyperfanalytics.rst
docs/sphinx/source/api/: charts.md  drawdowns.md  index.md  returns.md  tables.md
scripts/: add_license_headers.py  compare_results.py  create_gallery.py  export_r_datasets.R  gen_edge_case_benchmarks.R  gen_py_synthetic_data_v1.py  gen_py_synthetic_data_v2.py  gen_r_bench_advanced.R  gen_r_bench_core_metrics.R  gen_r_bench_ratios.R  gen_r_bench_v3.R  gen_tables_benchmarks.R  gen_test_data_v3.py  gen_yfinance_bench.R  gen_yfinance_data.py  generate_and_verify_all.py  generate_new_benchmarks.R  generate_r_benchmarks.R  generate_r_benchmarks_v2.R  generate_test_data.py  generate_test_data_v2.py  verify_benchmark_results.py
src/pyperfanalytics/: __init__.py  charts.py  core.py  drawdowns.py  returns.py  risk.py  tables.py  utils.py
tests/: conftest.py  test_active_metrics.py  test_advanced_ratios.py  test_attribution.py  test_capm.py  test_capture.py  test_charts.py  test_cross_verification.py  test_downside.py  test_drawdown_tables.py  test_drawdowns.py  test_edge_cases.py  test_missing_data.py  test_moments.py  test_new_tables.py  test_portfolio_yf.py  test_r_comp_advanced_metrics.py  test_r_comp_calendar_stats.py  test_r_comp_phase3.py  test_r_comp_phase4.py  test_r_comp_summary_tables.py  test_ratios.py  test_return_excess.py  test_scale_and_freq.py  test_sharpe.py  test_specialized_ratios.py  test_tables.py  test_tables_capture.py  test_tables_regression.py  test_tables_summary.py  test_utils.py
tests/benchmarks/: appraisal_ratio_alt.csv  appraisal_ratio_app.csv  appraisal_ratio_mod.csv  hurst_index.csv  input_contribution.csv  kappa_l1.csv  kappa_l2.csv  mean_absolute_deviation.csv  msquared.csv  msquared_excess_ari.csv  msquared_excess_geo.csv  net_selectivity.csv  prospect_ratio.csv  return_clean_boudt.csv  return_geltner.csv  return_portfolio_arith_none.csv  return_portfolio_geom_months.csv  return_portfolio_geom_none.csv  return_portfolio_geom_years.csv  smoothing_index.csv  sterling_ratio.csv  table_annualized_returns.csv  table_autocorrelation.csv  table_capture_ratios.csv  table_correlation.csv  table_distributions.csv  table_downside_risk_ratio.csv  table_drawdowns_ratio.csv  table_prob_outperformance.csv  table_rolling_periods.csv  table_stats.csv  table_up_down_ratios.csv  to_period_contributions.csv  yf_port_arith_none.csv  yf_port_geom_none.csv  yf_port_geom_years.csv
