[project]
name = "pyperfanalytics"
version = "0.1.0"
description = "Python port of R PerformanceAnalytics package using pandas, numpy, and statsmodels"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyperfanalytics"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "yfinance>=1.2.0",
]
