[project]
name = "pyperfanalytics"
version = "0.1.0"
description = "Python port of R PerformanceAnalytics package using pandas, numpy, and statsmodels"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "GPL-2.0-or-later" } # Common for ports of R packages
keywords = ["finance", "performance", "risk", "analytics", "portfolio", "returns"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]

[project.urls]
Homepage = "https://github.com/user/pyperfanalytics"
Repository = "https://github.com/user/pyperfanalytics"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "data",
    "scripts",
    "tests",
    "third_party",
    "AGENTS.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyperfanalytics"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "third_party",
]

line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`), Pycodestyle (`E`, `W`), isort (`I`), 
# pyupgrade (`UP`), and flake8-bugbear (`B`).
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E701", # Multiple statements on one line (colon)
    "E741", # Ambiguous variable name (e.g., 'l')
]

[tool.ruff.lint.isort]
known-first-party = ["pyperfanalytics"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra -q --doctest-modules"
testpaths = [
    "tests",
]
python_files = "test_*.py"
filterwarnings = [
    "ignore::DeprecationWarning:statsmodels.*:",
    "ignore::PendingDeprecationWarning:pandas.*:",
]

[tool.coverage.run]
source = ["src/pyperfanalytics"]
omit = ["tests/*", "third_party/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "yfinance>=1.2.0",
    "ruff>=0.9.0",
]
